--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,13 @@
+/* RESET */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
+    color: #8A8A8A;
 }
 
+/* COMMON */
 .clearfix::after {
     content: "";
     display: block;
@@ -15,46 +19,51 @@
     width: 1000px;
 }
 
-.title {
-    background-color: #E579E6;
-    height: 100px;
+/* HEADER */
+header {
     margin-top: 20px;
 }
 
+header > img {
+    height: 60px;
+}
+
+nav ul li{
+    display: inline-block;
+    margin-top: 30px;
+    font-size: 15px;
+}
+
+li > a {
+    text-decoration: none;
+    margin-right: 10px;
+}
+
+/* MAIN */
 .nav {
-    background-color: #E1D67A;
-    min-height: 350px;
     margin-top: 20px;
 }
 
 .box {
-    background-color: #008BF3;
     margin-top: 20px;
 }
 
 .riga {
-    background-color: #ABCFE7;
-    min-height: 50px;
     margin-bottom: 20px;
 }
 
 .col-left, .col-right {
-    background-color: #ABCFE7;
     float: left;
-    min-height: 400px;
     width: 20%;
 }
 
 .col-middle {
-    background-color: #ABCFE7;
     float: left;
-    min-height: 400px;
     width: calc(60% - 20px);
     margin: 0 10px 20px;
 }
 
+/* FOOTER */
 .foot {
-    background-color: #8801FE;
     margin: 10px 0 20px;
-    height: 40px;
 }
