--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+/* COMMON */
+body {
     font-family: 'Montserrat', sans-serif;
     color: #8A8A8A;
 }
 
-/* COMMON */
 .clearfix::after {
     content: "";
     display: block;
@@ -21,7 +24,7 @@
 
 /* HEADER */
 header {
-    margin-top: 20px;
+    margin-top: 5px;
 }
 
 header > img {
@@ -37,18 +40,34 @@ nav ul li{
 li > a {
     text-decoration: none;
     margin-right: 10px;
+    color: #8A8A8A;
 }
 
 /* MAIN */
-.nav {
+/* SECTION YOGA */
+.yoga {
+    margin-top: 40px;
+    background-image: url(../img/banner.jpg);
+    background-position: center;
+    border-radius: 10px;
+}
+
+.yoga-text {
+    padding: 280px 40px 60px;
+    color: white;
+    max-width: 560px;
+}
+
+.yoga-text > p {
+    font-size: 13px;
+}
+
+/* SECTION BOX-IMG */
+.box-img {
     margin-top: 20px;
 }
 
-.box {
-    margin-top: 20px;
-}
-
-.riga {
+.box-title {
     margin-bottom: 20px;
 }
 
