--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,8 @@ header {
 
 header > img {
     height: 60px;
+    border-right: 1px solid lightgrey;
+    padding-right: 20px;
 }
 
 nav ul li{
@@ -62,13 +64,31 @@ li > a {
     font-size: 13px;
 }
 
+h1 {
+    font-weight: 400;
+}
+
 /* SECTION BOX-IMG */
+.box-title > h2 {
+    color: black;
+}
+
 .box-img {
     margin-top: 20px;
 }
 
 .box-title {
     margin-bottom: 20px;
+}
+
+.columns h5 {
+    color: black;
+}
+
+.columns img {
+    width: 100%;
+    height: 200px;
+    border-radius: 10px;
 }
 
 .col-left, .col-right {
@@ -78,11 +98,37 @@ li > a {
 
 .col-middle {
     float: left;
-    width: calc(60% - 20px);
-    margin: 0 10px 20px;
+    width: calc(60% - 40px);
+    margin: 0 20px;
+}
+
+.img-left {
+    background-image: url(../img/img-1.jpg);
+}
+
+.img-middle {
+    background-image: url(../img/banner-2.jpg);
+}
+
+.img-right {
+    background-image: url(../img/img-3.jpg);
+}
+
+.img-left, .img-middle, .img-right {
+    height: 170px;
+    margin-bottom: 20px;
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
 }
 
 /* FOOTER */
-.foot {
-    margin: 10px 0 20px;
+footer {
+    margin: 30px 0 15px;
+    text-align: center;
+    color: black;
+}
+
+footer span {
+    color: red;
 }
