--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,14 @@ body {
     width: 1000px;
 }
 
+.overlay {
+    background-color: black;
+    opacity: 0.2;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+
 /* HEADER */
 header {
     margin-top: 5px;
@@ -52,6 +60,7 @@ li > a {
     background-image: url(../img/banner.jpg);
     background-position: center;
     border-radius: 10px;
+    height: 440px;
 }
 
 .yoga-text {
