--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,7 @@ body {
 }
 
 .overlay {
-    background-color: black;
-    opacity: 0.2;
+    background-color: rgba(0, 0, 0, 0.2);
     width: 100%;
     height: 100%;
     border-radius: 10px;
@@ -61,12 +60,18 @@ li > a {
     background-position: center;
     border-radius: 10px;
     height: 440px;
+    position: relative;
+}
+
+.yoga > .overlay {
+    position: absolute;
 }
 
 .yoga-text {
     padding: 280px 40px 60px;
     color: white;
     max-width: 560px;
+    position: relative;
 }
 
 .yoga-text > p {
